After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690836 - clutter_stage_set_fullscreen on a win32 stage does not function correctly
clutter_stage_set_fullscreen on a win32 stage does not function correctly
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: win32
git master
Other Windows
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-12-28 21:03 UTC by Wouter Paesen
Modified: 2013-01-16 22:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix fullscreen on win32 stage (2.02 KB, patch)
2012-12-28 21:03 UTC, Wouter Paesen
committed Details | Review

Description Wouter Paesen 2012-12-28 21:03:56 UTC
Created attachment 232351 [details] [review]
Fix fullscreen on win32 stage

When setting a win32 stage to fullscreen the window title bar is not removed.  

I think this is caused by the fact that get_window_style in clutter-stage-win32.c refers to _clutter_stage_is_fullscreen.   Inside clutter_stage_win32_set_fullscreen the value of _clutter_stage_is_fullscreen refers to the old (current) value of the stage's fullscreen flag instead of the new value, which is only updated at the end of the function.

Attached patch fixes the problem for me, but maybe there's a better solution for this.
Comment 1 Emmanuele Bassi (:ebassi) 2012-12-28 21:31:34 UTC
Review of attachment 232351 [details] [review]:

thanks for the patch. it looks good to me, apart from a small coding style nitpick that should be fixed before committing.

::: clutter/win32/clutter-stage-win32.c
@@ +290,3 @@
+
+  return get_requested_window_style (stage_win32, 
+   _clutter_stage_is_fullscreen (wrapper));

the coding style is wrong: _clutter_stage_is_fullscreen() should be vertically aligned with the stage_win32 argument.
Comment 2 Emmanuele Bassi (:ebassi) 2013-01-16 22:57:56 UTC
thanks for the patch; pushed to the master and clutter-1.14 branches.