* use requested value of fullscreen state in clutter_stage_win32_set_fullscreen instead of old value

https://bugzilla.gnome.org/show_bug.cgi?id=690836